modified size of filter selectors to prevent it jumping sizes during filter

--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,7 @@
 .disclaimer {
   font-weight: bold;
 }
+
+select {
+  width: 125px;
+}
